# techbuddy

./: .dockerignore  .gitignore  Dockerfile  README.md  WHISPER_STREAMING.md  docker-compose.yml  pyproject.toml  run_app.sh  stop_app.sh
src/backend/: main.py
src/backend/audio/: whisper_model.py
src/backend/configs/: config.py  dev.yaml  docker.yaml
src/backend/core/: narrator_websocket_handler.py  websocket_handler.py  websocket_handler2.py  whisper_model.py  whisper_model3.py
src/backend/db/init/: 001_create_users.sh  002_create_document_metadata.sh  003_create_extracted_text.sh  004_create_extracted_table.sh
src/backend/llm/: stt_cleaner.py
src/backend/questions/: question_provider.py
src/backend/utils/: configure_logger.py  download_whisper.py  minio_client.py  openai_client.py  push_msg_to_queue.py  rabbitmq_producer.py
src/backend/websocket/: candidate_websocket_handler.py  interviewer_websocket_handler.py
src/backend/websockets/: candidate_websocket_handler.py
src/frontend/: auth.html  index.html  transcribe.html  transcribe2.html  upload.html
src/frontend/configs/: dev.yaml
