[project]
name = "techbuddy"
version = "0.1.0"
description = ""
authors = [
    {name = "sukant-kumar",email = "sukant.kumar@arrise.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
