[project]
name = "techbuddy"
version = "0.1.0"
description = "Local streaming speech transcription over WebSocket"
authors = [
    {name = "sukant-kumar",email = "sukant.kumar@arrise.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "loguru (>=0.7.2,<1.0.0)",
]

[project.scripts]
techbuddy-server = "techbuddy.server.app:run"
techbuddy-client = "techbuddy.ui_tk:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
